<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.0</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.example</groupId>
	<artifactId>perspective</artifactId>
	<version>1.0.1</version>
	<name>perspective</name>
	<description>Web Client for Perspective</description>

	<properties>
		<java.version>11</java.version>
	</properties>
	
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.28</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>jakarta.xml.bind</groupId>
			<artifactId>jakarta.xml.bind-api</artifactId>
			<version>4.0.2</version>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-impl</artifactId>
			<version>4.0.5</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>jakarta.activation</groupId>
			<artifactId>jakarta.activation-api</artifactId>
			<version>2.1.3</version>
		</dependency>

		<!--<dependency>
			<groupId>org.glassfish.metro</groupId>
			<artifactId>metro-standalone</artifactId>
			<version>2.4.8</version>
			<type>pom</type>
		</dependency>-->
		<dependency>
			<groupId>org.glassfish.metro</groupId>
			<artifactId>webservices-api</artifactId>
			<version>2.4.8</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.metro</groupId>
			<artifactId>webservices-extra-api</artifactId>
			<version>2.4.8</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.metro</groupId>
			<artifactId>webservices-extra</artifactId>
			<version>2.4.8</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.metro</groupId>
			<artifactId>webservices-rt</artifactId>
			<version>2.4.8</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.metro</groupId>
			<artifactId>webservices-tools</artifactId>
			<version>2.4.8</version>
		</dependency>

		<dependency>
			<groupId>ua.avtor.crypto-lib</groupId>
			<artifactId>crypto-lib</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${pom.basedir}/lib/arcryptolib.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>ua.avtor.crypto-lib</groupId>
			<artifactId>JcaProv-lib</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${pom.basedir}/lib/AvtorJcaProv.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>ua.avtor.crypto-lib</groupId>
			<artifactId>CI3Client-lib</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${pom.basedir}/lib/Cl3ClientLib.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcprov-jdk18on</artifactId>
			<version>1.80</version>
		</dependency>

	</dependencies>

	<build>
		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>1.18.28</version>
						</path>
					</annotationProcessorPaths>
					<compilerArgs>
						<arg>--add-exports</arg>
						<arg>java.base/sun.security.provider=ALL-UNNAMED</arg>
						<arg>--add-exports</arg>
						<arg>java.base/sun.security.pkcs=ALL-UNNAMED</arg>
						<arg>--add-exports</arg>
						<arg>java.base/sun.security.util=ALL-UNNAMED</arg>
						<arg>--add-exports</arg>
						<arg>java.base/sun.security.x509=ALL-UNNAMED</arg>
						<arg>--add-modules</arg>
						<arg>jdk.crypto.cryptoki</arg>
						<arg>--add-exports</arg>
						<arg>jdk.crypto.cryptoki/sun.security.pkcs11.wrapper=ALL-UNNAMED</arg>
					</compilerArgs>
				</configuration>
			</plugin>

			<!--<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.2.5</version>
				<configuration>
					<excludes>
						<exclude>*:bcprov-jdk18:*</exclude>
					</excludes>
				</configuration>
			</plugin>-->

			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<includeSystemScope>true</includeSystemScope>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>jaxb2-maven-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<id>xjc</id>
						<goals>
							<goal>xjc</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<skipXjc>true</skipXjc>
					<xjbSources>
						<xjbSource>src/main/resources/global.xjb</xjbSource>
					</xjbSources>
					<outputDirectory>
						${project.basedir}/src/main/java
					</outputDirectory>
					<clearOutputDir>
						false
					</clearOutputDir>
				</configuration>
			</plugin>

		</plugins>
	</build>

</project>
